<resources>
    <string name="app_name">Погода</string>
    <string name="todo">todo</string>
    <string name="error">Ошибка</string>
    <string name="reload">Перезагрузить</string>
    <string name="settings">настройки</string>
    <string name="main">main</string>
    <string name="favorite">favorite</string>
    <string name="search">поиск</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Введено символов:</string>
    <string name="search_by_zip_code">Search by ZIP Code</string>
    <string name="city">город</string>
    <string name="cityName">Paris</string>
    <string name="current_temp">+18°С</string>
    <string name="location">Место</string>
    <string name="temperature">Температура</string>
    <string name="wind_speed">Скорость ветра</string>
    <string name="_8_5_mph">8.5 mph</string>
    <string name="humidity">Влажность</string>
    <string name="_54">54 %</string>
    <string name="visibility">Видимость</string>
    <string name="clear">Чисто</string>
    <string name="_3_26_2021_2_00_00_pm_utc">3/26/2021 2:00:00 PM UTC</string>
    <string name="time_of_sunrise">Восход</string>
    <string name="time_of_sunset">Закат</string>
    <string name="_3_27_2021_2_26_00_am_utc">3/27/2021 2:26:00 AM UTC</string>
    <string name="search_by_city_name">Поиск по названию населённого пункта</string>
    <string name="condition">Состояние</string>
    <string name="current_condition">Облачно</string>
    <string name="search_by">Поиск по индексу или названию</string>
    <string name="zip">поиск по индексу</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="cloudy">переменная облачность</string>
</resources>