<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardViewContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/search_by_zip_code"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_baseline_search_24"
        app:endIconMode="custom"
        app:helperText="characters entered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardViewContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@id/cardViewContainer"
        app:layout_constraintTop_toBottomOf="@id/temperature" />

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin_top"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="@id/cardViewContainer"
        app:layout_constraintTop_toBottomOf="@id/input_layout" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin_top"
        android:text="@string/cityName"
        android:textSize="@dimen/defaultTextSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/cardViewContainer"
        app:layout_constraintTop_toBottomOf="@id/location" />

    <TextView
        android:id="@+id/currentTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin_top"
        android:text="@string/current_temp"
        app:layout_constraintStart_toStartOf="@id/cardViewContainer"
        app:layout_constraintTop_toBottomOf="@id/cityName" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin_top"
        android:text="@string/current_temp"
        android:textSize="@dimen/defaultTextSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/cardViewContainer"
        app:layout_constraintTop_toBottomOf="@id/currentTemp" />

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/design_default_color_on_primary"
        android:visibility="gone"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="46dp"
        tools:visibility="invisible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
